<resources>
    <string name="app_name">Registration Plates Recognizer</string>
    <string name="welcomeUser"><u>Welcome!</u></string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="help">Help</string>
    <string name="recognitionMethodSpinnerPrompt">Choose a recognition method</string>
    <string name="radioButtonLive">LIVE</string>
    <string name="radioButtonGallery">GALLERY</string>
    <string name="radioButtonPhoto">IMAGE</string>
    <string name="radioButtonVideo">VIDEO</string>
    <string name="buttonPickImageFromGallery">Pick Image</string>
    <string name="buttonTakeAPhoto">Take a photo</string>
    <string name="buttonColorDetect">Detect color</string>
    <string name="checkBoxEnableOCR">Enable OCR</string>
    <string-array name="recognitionMethodsArray">
        <item>Vertical Edge Contouring</item>
        <item>Morphological Transformations</item>
        <item>Median Center of Moments</item>
    </string-array>
    <string name="buttonProceed">Proceed</string>
    <string name="recognitionMode">recognition mode</string>
    <string name="resourceType">resource type</string>
    <string name="processingMethod">processing method</string>
    <string name="startRecognition">Start Recognition</string>
    <string name="setDistanceFromTheCar">set distance from the car</string>
    <string name="oldPates">old plates mode</string>
    <string name="amountOfPlates">number of plates for parallel recognition</string>
    <string name="amountOfPlatesHorizontal">number of plates</string>
    <string name="one">1</string>
    <string name="two">UP TO 4</string>
    <string name="carDistanceIncreased">Distance from the car increased</string>
    <string name="carDistanceReduced">Distance from the car reduced</string>
    <string name="ocrOn">License plate characters recognition on</string>
    <string name="ocrOff">License plate characters recognition off</string>
    <string name="oldPlatesModeOn">Old license plates recognition activated. Changing method to Morphological Transformations.</string>
    <string name="oldPlatesModeOff">Old license plates recognition deactivated. Restoring </string>
    <string name="startApp">press  here\nto  start</string>
    <string name="startAppLand">press  here  to  start</string>
    <string name="recognizeButton">Recognize!</string>

</resources>
