<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adjust_parameters_background"
    tools:context=".ConfirmRecognitionSelectionActivity">

    <TextView
        android:id="@+id/confirmationOfRecognitionSelectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/selectResourceButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/black"
        android:text="@string/startRecognition"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:onClick="pickResourceForRecognitionWithButton"/>

    <ImageView
        android:id="@+id/resourceForRecognitionImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/confirmationOfRecognitionSelectionTextView"/>

    <TextView
        android:id="@+id/setDistanceFromCarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmationOfRecognitionSelectionTextView"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/speed_font"
        android:textColor="@android:color/black"
        android:text="@string/setDistanceFromTheCar"/>

    <SeekBar
        android:id="@+id/plateDistanceSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:max="4"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setDistanceFromCarTextView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/plateDistanceSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/setDistanceFromCarTextView"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="FAR"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/plateDistanceSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/setDistanceFromCarTextView"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="CLOSE"/>

    <TextView
        android:id="@+id/oldPlatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plateDistanceSeekBar"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/speed_font"
        android:textColor="@android:color/black"
        android:text="@string/oldPates"/>

    <Switch
        android:id="@+id/oldPlatesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/oldPlatesTextView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/oldPlatesSwitch"
        app:layout_constraintTop_toBottomOf="@+id/oldPlatesTextView"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="ON"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/oldPlatesSwitch"
        app:layout_constraintTop_toBottomOf="@+id/oldPlatesTextView"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="OFF"/>

    <TextView
        android:id="@+id/numberOfPlatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPlatesSwitch"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/speed_font"
        android:textColor="@android:color/black"
        android:text="@string/amountOfPlates"/>

    <RadioGroup
        android:id="@+id/amountOfPlatesRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPlatesTextView"

        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/onePlateRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="100dp"
            android:checked="true"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:buttonTint= "@android:color/holo_blue_dark"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/twoPlatesRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:textColor="@android:color/black"
            android:buttonTint= "@android:color/holo_red_light"
            android:textStyle="bold"
            android:text="@string/two" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>