<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/select_source_for_recognition_activity_background"
    tools:context=".SelectSourceForRecognitionActivity">

    <TextView
        android:id="@+id/recognitionMethodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/videoOrPhotoRadioGroup"
        android:textColor="@android:color/holo_blue_light"
        android:text="Choose Recognition Method"/>

    <Spinner
        android:id="@+id/recognitionMethodSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/recognitionMethodTextView"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/holo_red_light"/>


    <Button
        android:id="@+id/startRecognitionButton"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/startRecognitionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="goToConfirmRecognitionSelectionActivity"/>

    <TextView
        android:id="@+id/liveOrPrerecordedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@android:"
        android:textColor="@android:color/holo_blue_light"
        android:text="Choose between live recognition mode and existing file recognition mode"/>

    <RadioGroup
        android:id="@+id/liveOrPrerecordedRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liveOrPrerecordedTextView"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/liveRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="100dp"
            android:checked="true"

            android:textColor="@android:color/holo_blue_light"
            android:buttonTint= "@android:color/holo_red_light"
            android:text="@string/radioButtonLive" />

        <RadioButton
            android:id="@+id/galleryRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:textColor="@android:color/holo_blue_light"
            android:buttonTint= "@android:color/holo_red_light"

            android:text="@string/radioButtonGallery" />
    </RadioGroup>

    <TextView
        android:id="@+id/videoOrPhotoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintTop_toBottomOf="@+id/liveOrPrerecordedRadioGroup"
        android:text="Choose to recognize basing on video or photography"/>

    <RadioGroup
        android:id="@+id/videoOrPhotoRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoOrPhotoTextView"

        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/videoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="100dp"
            android:checked="true"
            android:textColor="@android:color/holo_blue_light"
            android:buttonTint= "@android:color/holo_red_light"
            android:text="@string/radioButtonVideo" />

        <RadioButton
            android:id="@+id/photoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_light"
            android:buttonTint= "@android:color/holo_red_light"
            android:paddingRight="20dp"
            android:text="@string/radioButtonPhoto" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>